--- a/Direto ao ponto/package.json
+++ b/Direto ao ponto/package.json
@@ -2,14 +2,13 @@
   "dependencies": {
     "cypress": "^12.13.0"
   },
-  "name": "primeiro-projeto",
+  "name": "direto-ao-ponto",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dicas.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress open"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
